--- a/my-app/src/assets/locales/vi.json
+++ b/my-app/src/assets/locales/vi.json
@@ -6,5 +6,12 @@
     "support":"Hỗ trợ",
     "storeqote":"Cách tốt nhất để mua sản phẩm bạn thích.",
     "needhelp":"Bạn cần trợ giúp mua sắm?",
-    "ask":"Hỏi Chuyên Gia"
+    "ask":"Hỏi Chuyên Gia",
+    "lastgen":"Thế hệ Mới nhất",
+    "lastgenqote":"Xem ngay có gì mới",
+    "supporttitle":"Hỗ trợ tại đây",
+    "supporqote":"Ngay khi bạn muốn, mọi việc bạn cần.",
+    "specialist":"CHUYÊN GIA APPLE",
+    "specialistQote":"Mua hàng với tư vấn trực tiếp từ Chuyên Gia trực tuyến.",
+    "specialistQote2":"Dịch vụ và hỗ trợ. Chúng tôi luôn sẵn sàng hỗ trợ."
 }
