--- a/my-app/src/assets/locales/en.json
+++ b/my-app/src/assets/locales/en.json
@@ -6,5 +6,9 @@
     "support":"Support",
     "storeqote":"Best way to get what you love",
     "needhelp":"Need help?",
-    "ask":"Ask"
+    "ask":"Ask",
+    "lastgen":"Latest generation",
+    "lastgenqote":"See what's new now.",
+    "supporttitle":"Support here",
+    "supporqote":"When you want it, everything you need."
 }
