--- a/my-app/src/assets/locales/vi.json
+++ b/my-app/src/assets/locales/vi.json
@@ -3,5 +3,12 @@
     "tvhome":"TV và nhà",
     "entertain":"Giải trí",
     "acs":"Phụ kiện",
-    "support":"Hỗ trợ"
+    "support":"Hỗ trợ",
+    "storeqote":"Cách tốt nhất để mua sản phẩm bạn thích.",
+    "needhelp":"Bạn cần trợ giúp mua sắm?",
+    "ask":"Hỏi Chuyên Gia",
+    "lastgen":"Thế hệ Mới nhất",
+    "lastgenqote":"Xem ngay có gì mới",
+    "supporttitle":"Hỗ trợ tại đây",
+    "supporqote":"Ngay khi bạn muốn, mọi việc bạn cần."
 }
