--- a/my-app/src/assets/locales/en.json
+++ b/my-app/src/assets/locales/en.json
@@ -3,5 +3,12 @@
     "tvhome":"TV and home",
     "entertain":"Entertain",
     "acs":"Acessory",
-    "support":"Support"
+    "support":"Support",
+    "storeqote":"Best way to get what you love",
+    "needhelp":"Need help?",
+    "ask":"Ask",
+    "lastgen":"Latest generation",
+    "lastgenqote":"See what's new now.",
+    "supporttitle":"Support here",
+    "supporqote":"When you want it, everything you need."
 }
