--- a/my-app/src/assets/locales/en.json
+++ b/my-app/src/assets/locales/en.json
@@ -4,7 +4,69 @@
     "entertain":"Entertain",
     "acs":"Acessory",
     "support":"Support",
-    "storeqote":"Best way to get what you love",
+    "storeQote":"Best way to get what you love",
     "needhelp":"Need help?",
-    "ask":"Ask"
+    "ask":"Ask",
+    "lastgen":"Latest generation",
+    "lastgenQote":"See what's new now.",
+    "supportTitle":"Support here",
+    "supportQote":"When you want it, everything you need.",
+    "ad2Title":"Apple Store makes all the difference",
+    "ad2Qote":"More reasons to shop with us",
+    "acsTitle":"Accessories",
+    "acsQote":"that perfectly match your favorite device",
+    "headphoneTitle":"Loud and clear",
+    "headphoneQote":"The perfect choice for full, high-quality sound.",
+    "tagTitle":"Tag",
+    "footerShoppingAndLearning": "Shopping and Learning",
+    "footerStore": "Store",
+    "footerMac": "Mac",
+    "footerIpad": "iPad",
+    "footerIphone": "iPhone",
+    "footerWatch": "Watch",
+    "footerAirpods": "AirPods",
+    "footerTvAndHome": "TV and Home",
+    "footerAirtag": "AirTag",
+    "footerAccessories": "Accessories",
+    "footerAppleWallet": "Apple Wallet",
+    
+    "footerAccount": "Account",
+    "footerManageAppleID": "Manage Apple ID",
+    "footerAppleStoreAccount": "Apple Store Account",
+    "footerIcloud": "iCloud",
+    
+    "footerAppleStore": "Apple Store",
+    "footerAppleStoreApp": "Apple Store App",
+    "footerFinancing": "Financing",
+    "footerTradeIn": "Trade In",
+    "footerOrderStatus": "Order Status",
+    "footerShoppingHelp": "Shopping Help",
+    
+    "footerForBusiness": "For Business",
+    "footerAppleForBusiness": "Apple for Business",
+    "footerBusinessShopping": "Business Shopping",
+    
+    "footerForEducation": "For Education",
+    "footerAppleForEducation": "Apple for Education",
+    "footerEducationShopping": "Education Shopping",
+    
+    "footerForHealthcare": "For Healthcare",
+    "footerAppleForHealthcare": "Apple for Healthcare",
+    "footerHealthOnAppleWatch": "Health on Apple Watch",
+    
+    "footerAppleCoreValues": "Apple Core Values",
+    "footerAccessibility": "Accessibility",
+    "footerEnvironment": "Environment",
+    "footerPrivacy": "Privacy",
+    "footerSupplyChain": "Supply Chain",
+    
+    "footerAboutApple": "About Apple",
+    "footerNewsroom": "Newsroom",
+    "footerAppleLeadership": "Apple Leadership",
+    "footerInvestors": "Investors",
+    "footerEthicsAndCompliance": "Ethics and Compliance",
+    "footerEvents": "Events",
+    "footerContactApple": "Contact Apple",
+    "footerEntertainment": "Entertainment",
+    "footerAppleOne": "AppleOne"
 }
