--- a/my-app/src/assets/locales/vi.json
+++ b/my-app/src/assets/locales/vi.json
@@ -4,7 +4,69 @@
     "entertain":"Giải trí",
     "acs":"Phụ kiện",
     "support":"Hỗ trợ",
-    "storeqote":"Cách tốt nhất để mua sản phẩm bạn thích.",
+    "storeQote":"Cách tốt nhất để mua sản phẩm bạn thích.",
     "needhelp":"Bạn cần trợ giúp mua sắm?",
-    "ask":"Hỏi Chuyên Gia"
+    "ask":"Hỏi Chuyên Gia",
+    "lastgen":"Thế hệ Mới nhất",
+    "lastgenQote":"Xem ngay có gì mới",
+    "supportTitle":"Hỗ trợ tại đây",
+    "supportQote":"Ngay khi bạn muốn, mọi việc bạn cần.",
+    "ad2Title":"Apple Store tạo nên mọi khác biệt",
+    "ad2Qote":"Thêm nhiều lý do để mua sắm cùng chúng tôi.",
+    "acsTitle":"Phụ kiện",
+    "acsQote":"Những phụ kiện kết hợp hoàn hảo với thiết bị yêu thích của bạn",
+    "headphoneTitle":"To rõ, trong trẻo",
+    "headphoneQote":" Lựa chọn hoàn hảo cho âm thanh tròn đầy, chất lượng cao.",
+    "tagTitle":"Liên Kết Nhanh",
+    "footerShoppingAndLearning": "Mua Sắm và Tìm Hiểu",
+    "footerStore": "Cửa hàng",
+    "footerMac": "Mac",
+    "footerIpad": "iPad",
+    "footerIphone": "iPhone",
+    "footerWatch": "Watch",
+    "footerAirpods": "AirPods",
+    "footerTvAndHome": "TV và Nhà",
+    "footerAirtag": "AirTag",
+    "footerAccessories": "Phụ Kiện",
+    "footerAppleWallet": "Apple Wallet",
+    
+    "footerAccount": "Tài Khoản",
+    "footerManageAppleID": "Quản Lý Apple ID",
+    "footerAppleStoreAccount": "Tài Khoản Apple Store",
+    "footerIcloud": "iCloud",
+    
+    "footerAppleStore": "Apple Store",
+    "footerAppleStoreApp": "Ứng Dụng Apple Store",
+    "footerFinancing": "Tài Chính",
+    "footerTradeIn": "Đổi Mới",
+    "footerOrderStatus": "Tình Trạng Đơn Hàng",
+    "footerShoppingHelp": "Trợ Giúp Mua Sắm",
+    
+    "footerForBusiness": "Dành Cho Doanh Nghiệp",
+    "footerAppleForBusiness": "Apple Cho Doanh Nghiệp",
+    "footerBusinessShopping": "Mua Sắm Doanh Nghiệp",
+    
+    "footerForEducation": "Dành Cho Giáo Dục",
+    "footerAppleForEducation": "Apple Cho Giáo Dục",
+    "footerEducationShopping": "Mua Sắm Giáo Dục",
+    
+    "footerForHealthcare": "Dành Cho Chăm Sóc Sức Khỏe",
+    "footerAppleForHealthcare": "Apple Cho Chăm Sóc Sức Khỏe",
+    "footerHealthOnAppleWatch": "Chăm Sóc Sức Khỏe Trên Apple Watch",
+    
+    "footerAppleCoreValues": "Giá Trị Cốt Lõi Của Apple",
+    "footerAccessibility": "Khả Năng Truy Cập",
+    "footerEnvironment": "Môi Trường",
+    "footerPrivacy": "Bảo Mật",
+    "footerSupplyChain": "Chuỗi Cung Ứng",
+    
+    "footerAboutApple": "Về Apple",
+    "footerNewsroom": "Phòng Tin Tức",
+    "footerAppleLeadership": "Lãnh Đạo Apple",
+    "footerInvestors": "Nhà Đầu Tư",
+    "footerEthicsAndCompliance": "Đạo Đức và Tuân Thủ",
+    "footerEvents": "Sự Kiện",
+    "footerContactApple": "Liên Hệ Apple",
+    "footerEntertainment":"Giải trí",
+    "footerAppleOne": "AppleOne"
 }
